Added the dark mode

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </head>
 
-  <body>
+  <body class="light-theme">
     <div id="header">
       <div id="logo">CodeRunner</div>
 
@@ -19,8 +23,15 @@
         <div class="toggle-btn" id="css">CSS</div>
         <div class="toggle-btn" id="js">JS</div>
         <div class="toggle-btn" id="output">Output</div>
-      </div>
     </div>
+    <div class="dark">
+      Dark Mode
+    </div>
+    <div class="custom-control custom-switch myChange">
+        <input type="checkbox" class="custom-control-input" id="customSwitch1">
+        <label class="custom-control-label" for="customSwitch1"></label>
+    </div>
+  </div>
     <div id="bodyContainer">
       <textarea class="panelH" id="htmlTA" placeholder="Enter HTML"></textarea>
       <textarea class="panel" id="cssTA" placeholder="Enter CSS"></textarea>
@@ -29,8 +40,8 @@
         id="jsTA"
         placeholder="Enter Java Script"
       ></textarea>
-      <div>
-        <p style="margin: 0px; color: grey" id="output-txt" class="panel">
+      <div class="extra-cover">
+        <p style="margin: 0px; color: grey; width:100%;" id="output-txt" class="panel">
           Output
         </p>
         <hr />
