--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeRunner</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
-  </head>
 
-  <body>
-    <div id="header">
-      <div id="logo">CodeRunner</div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CodeRunner</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"
+    integrity="sha512-GZ1RIgZaSc8rnco/8CXfRdCpDxRCphenIiZ2ztLy3XQfCbQUSCuk8IudvNHxkRA3oUg6q0qejgN/qqyG1duv5Q=="
+    crossorigin="anonymous" defer></script>
+  <script src="script.js" defer></script>
+</head>
 
-      <button id="runBtn">Run</button>
-      <div id="btnContainer">
-        <div class="toggle-btn" id="html">HTML</div>
-        <div class="toggle-btn" id="css">CSS</div>
-        <div class="toggle-btn" id="js">JS</div>
-        <div class="toggle-btn" id="output">Output</div>
-      </div>
+<body>
+  <div id="header">
+    <div id="logo">CodeRunner</div>
+
+    <button id="runBtn">Run</button>
+    <div id="btnContainer">
+      <div class="toggle-btn active" id="html">HTML</div>
+      <div class="toggle-btn active" id="css">CSS</div>
+      <div class="toggle-btn active" id="js">JS</div>
+      <div class="toggle-btn" id="output">Output</div>
     </div>
-    <div id="bodyContainer">
-      <textarea class="panelH" id="htmlTA" placeholder="Enter HTML"></textarea>
-      <textarea class="panel" id="cssTA" placeholder="Enter CSS"></textarea>
-      <textarea
-        class="panel"
-        id="jsTA"
-        placeholder="Enter Java Script"
-      ></textarea>
-      <div>
-        <p style="margin: 0px; color: grey" id="output-txt" class="panel">
-          Output
-        </p>
-        <hr />
-        <iframe id="outputDiv" class="panel"></iframe>
-      </div>
+
+    <span class="material-icons theme-toggle">
+      brightness_4
+    </span>
+  </div>
+  <div id="bodyContainer">
+    <div class="panel" id="htmlTA"></div>
+    <div class="panel" id="cssTA"></div>
+    <div class="panel" id="jsTA"></div>
+    <div>
+      <p style="margin: 0px; color: grey" id="output-txt" class="panel">
+        Output
+      </p>
+      <hr />
+      <iframe id="outputDiv" class="panel"></iframe>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
